<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message_center"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main_drawer_nav_1" />
        <item
            android:id="@+id/nav_my_friendship"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/main_drawer_nav_2" />
        <item
            android:id="@+id/nav_vip_center"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/main_drawer_nav_3" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/main_drawer_nav_4" />
        <item
            android:id="@+id/nav_extra_feature"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/main_drawer_nav_5" />
    </group>

    <item android:title="社交圈">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/main_drawer_nav_7" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/main_drawer_nav_8" />
        </menu>
    </item>
    <item android:title="" >
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="设置" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="退出" />
        </menu>
    </item>

</menu>
